Bug 766296 - Make AutoMounter notice SD Card insertion and removal r=qdot