dom/system/gonk/AutoMounter.cpp
@@ -23,6 +23,7 @@
 #include "mozilla/FileUtils.h"
 #include "mozilla/Hal.h"
 #include "nsAutoPtr.h"
+#include "nsMemory.h"
 #include "nsString.h"
 #include "nsThreadUtils.h"
 #include "nsXULAppAPI.h"
@@ -82,6 +83,10 @@ namespace mozilla {
 namespace system {
 
 class AutoMounter;
+
+// sAutoVolumeName contains an array of the volume names that the AutoMounter will
+// try to automount. Any other volumes will be ignored.
+static const nsDependentCString sAutoVolumeName[] = { NS_LITERAL_CSTRING("sdcard") };
 
 /**************************************************************************
 *
@@ -157,10 +162,20 @@ IsUsbCablePluggedIn()
 
 /***************************************************************************/
 
-class VolumeManagerStateObserver : public VolumeManager::StateObserver
+// The AutoVolumeManagerStateObserver allows the AutoMounter to know when
+// the volume manager changes state (i.e. it has finished initialization)
+class AutoVolumeManagerStateObserver : public VolumeManager::StateObserver
 {
 public:
   virtual void Notify(const VolumeManager::StateChangedEvent &aEvent);
+};
+
+// The AutoVolumeEventObserver allows the AutoMounter to know about card
+// insertion and removal, as well as state changes in the volume.
+class AutoVolumeEventObserver : public Volume::EventObserver
+{
+public:
+  virtual void Notify(Volume * const &aEvent);
 };
 
 class AutoMounterResponseCallback : public VolumeResponseCallback
@@ -185,17 +200,34 @@ private:
 class AutoMounter : public RefCounted<AutoMounter>
 {
 public:
+
+  typedef nsTArray<RefPtr<Volume> > VolumeArray;
+
   AutoMounter()
     : mResponseCallback(new AutoMounterResponseCallback),
       mMode(AUTOMOUNTER_DISABLE)
   {
     VolumeManager::RegisterStateObserver(&mVolumeManagerStateObserver);
+
+    for (size_t i = 0; i < NS_ARRAY_LENGTH(sAutoVolumeName); i++) {
+      RefPtr<Volume> vol = VolumeManager::FindAddVolumeByName(sAutoVolumeName[i]);
+      if (vol != NULL) {
+        vol->RegisterObserver(&mVolumeEventObserver);
+        mAutoVolume.AppendElement(vol);
+      }
+    }
+
     DBG("Calling UpdateState from constructor");
     UpdateState();
   }
 
   ~AutoMounter()
   {
+    VolumeArray::index_type volIndex;
+    VolumeArray::size_type  numVolumes = mAutoVolume.Length();
+    for (volIndex = 0; volIndex < numVolumes; volIndex++) {
+      mAutoVolume[volIndex]->UnregisterObserver(&mVolumeEventObserver);
+    }
     VolumeManager::UnregisterStateObserver(&mVolumeManagerStateObserver);
   }
 
@@ -216,9 +248,11 @@ public:
 
 private:
 
-  VolumeManagerStateObserver      mVolumeManagerStateObserver;
+  AutoVolumeEventObserver         mVolumeEventObserver;
+  AutoVolumeManagerStateObserver  mVolumeManagerStateObserver;
   RefPtr<VolumeResponseCallback>  mResponseCallback;
   int32_t                         mMode;
+  VolumeArray                     mAutoVolume;
 };
 
 static RefPtr<AutoMounter> sAutoMounter;
@@ -226,7 +260,7 @@ static RefPtr<AutoMounter> sAutoMounter;
 /***************************************************************************/
 
 void
-VolumeManagerStateObserver::Notify(const VolumeManager::StateChangedEvent &)
+AutoVolumeManagerStateObserver::Notify(const VolumeManager::StateChangedEvent &)
 {
   LOG("VolumeManager state changed event: %s", VolumeManager::StateStr());
 
@@ -234,6 +268,16 @@ VolumeManagerStateObserver::Notify(const VolumeManager::StateChangedEvent &)
     return;
   }
   DBG("Calling UpdateState due to VolumeManagerStateObserver");
+  sAutoMounter->UpdateState();
+}
+
+void
+AutoVolumeEventObserver::Notify(Volume * const &)
+{
+  if (!sAutoMounter) {
+    return;
+  }
+  DBG("Calling UpdateState due to VolumeEventStateObserver");
   sAutoMounter->UpdateState();
 }
 
@@ -284,12 +328,7 @@ AutoMounter::UpdateState()
     return;
   }
 
-  std::vector<RefPtr<Volume> > volumeArray;
-  RefPtr<Volume> vol = VolumeManager::FindVolumeByName(NS_LITERAL_CSTRING("sdcard"));
-  if (vol != NULL) {
-    volumeArray.push_back(vol);
-  }
-  if (volumeArray.size() == 0) {
+  if (mAutoVolume.Length() == 0) {
     // No volumes of interest, nothing to do
     LOG("UpdateState: No volumes found");
     return;
@@ -322,12 +361,19 @@ AutoMounter::UpdateState()
   LOG("UpdateState: umsAvail:%d umsEnabled:%d mode:%d usbCablePluggedIn:%d tryToShare:%d",
       umsAvail, umsEnabled, mMode, usbCablePluggedIn, tryToShare);
 
-  VolumeManager::VolumeArray::iterator volIter;
-  for (volIter = volumeArray.begin(); volIter != volumeArray.end(); volIter++) {
-    RefPtr<Volume>  vol = *volIter;
+  VolumeArray::index_type volIndex;
+  VolumeArray::size_type  numVolumes = mAutoVolume.Length();
+  for (volIndex = 0; volIndex < numVolumes; volIndex++) {
+    RefPtr<Volume>  vol = mAutoVolume[volIndex];
     Volume::STATE   volState = vol->State();
 
-    LOG("UpdateState: Volume %s is %s", vol->NameStr(), vol->StateStr());
+    LOG("UpdateState: Volume %s is %s and %s", vol->NameStr(), vol->StateStr(),
+        vol->MediaPresent() ? "inserted" : "missing");
+    if (!vol->MediaPresent()) {
+      // No media - nothing we can do
+      continue;
+    }
+
     if (tryToShare) {
       // We're going to try to unmount and share the volumes
       switch (volState) {
